defconfigs: Enable MI_DAVINCI_DOUBLE_CLICK
Signed-off-by: Stephen Xian <stevexian56@gmail.com>

--- a/arch/arm64/configs/raphael_user_defconfig
+++ b/arch/arm64/configs/raphael_user_defconfig
@@ -894,3 +894,5 @@ CONFIG_MQ_IOSCHED_KYBER=y
 CONFIG_DEFAULT_DEADLINE=y
 # Enable KCAL
 CONFIG_DRM_MSM_KCAL_CTRL=y
+# Enable Double Click
+CONFIG_TOUCHSCREEN_MI_DAVINCI_DOUBLE_CLICK=y
